Fix image paths to match registry structure
Changed python and busybox image paths from library/python and library/busybox
to python and busybox to match how epr.sh loads images into the registry.

--- a/helm_charts/windows-synthetic-agent/values.yaml
+++ b/helm_charts/windows-synthetic-agent/values.yaml
@@ -11,7 +11,7 @@ agentImage:
 # Generator sidecar image (python:3.11-slim pre-loaded to local registry)
 generatorImage:
   registry: localhost:5000
-  repository: library/python
+  repository: python
   tag: "3.11-slim"
   pullPolicy: IfNotPresent
 
