--- a/helm_charts/windows-synthetic-agent/templates/deployment.yaml
+++ b/helm_charts/windows-synthetic-agent/templates/deployment.yaml
@@ -36,7 +36,7 @@ spec:
       # Init container to create log directory with proper permissions
       initContainers:
       - name: init-log-dir
-        image: "{{ .Values.agentImage.registry }}/library/busybox:1.36"
+        image: "{{ .Values.agentImage.registry }}/busybox:1.36"
         imagePullPolicy: IfNotPresent
         command: ['sh', '-c', 'mkdir -p {{ .Values.generator.logFile.path }} && chmod 777 {{ .Values.generator.logFile.path }}']
         volumeMounts:
