Change event rate from per-second to per-minute
More intuitive for users who don't want to overload the system.
Default is 60 events/minute (1 per second).

--- a/helm_charts/windows-synthetic-agent/templates/configmap-generator-config.yaml
+++ b/helm_charts/windows-synthetic-agent/templates/configmap-generator-config.yaml
@@ -10,8 +10,8 @@ data:
     # Generator mode: continuous or batch
     mode: {{ .Values.generator.mode }}
 
-    # Events per second (continuous mode)
-    eventsPerSecond: {{ .Values.generator.eventsPerSecond }}
+    # Events per minute (continuous mode)
+    eventsPerMinute: {{ .Values.generator.eventsPerMinute }}
 
     # Batch settings
     batchSize: {{ .Values.generator.batchSize }}
