--- a/helm_charts/windows-synthetic-agent/templates/deployment.yaml
+++ b/helm_charts/windows-synthetic-agent/templates/deployment.yaml
@@ -13,7 +13,6 @@ spec:
   template:
     metadata:
       annotations:
-        checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
         checksum/generator: {{ include (print $.Template.BasePath "/configmap-generator.yaml") . | sha256sum }}
         checksum/generator-config: {{ include (print $.Template.BasePath "/configmap-generator-config.yaml") . | sha256sum }}
         {{- with .Values.podAnnotations }}
@@ -25,26 +24,13 @@ spec:
         {{- toYaml . | nindent 8 }}
         {{- end }}
     spec:
-      {{- if .Values.serviceAccount.create }}
-      serviceAccountName: {{ .Values.serviceAccount.name }}
-      {{- end }}
       {{- with .Values.podSecurityContext }}
       securityContext:
         {{- toYaml . | nindent 8 }}
       {{- end }}
 
-      # Init container to create log directory with proper permissions
-      initContainers:
-      - name: init-log-dir
-        image: "{{ .Values.agentImage.registry }}/busybox:1.36"
-        imagePullPolicy: IfNotPresent
-        command: ['sh', '-c', 'mkdir -p {{ .Values.generator.logFile.path }} && chmod 777 {{ .Values.generator.logFile.path }}']
-        volumeMounts:
-        - name: windows-logs
-          mountPath: {{ .Values.generator.logFile.path }}
-
       containers:
-      # Sidecar: Windows Event Generator
+      # Windows Event Generator - sends directly to Elasticsearch
       - name: windows-event-generator
         image: "{{ .Values.generatorImage.registry }}/{{ .Values.generatorImage.repository }}:{{ .Values.generatorImage.tag }}"
         imagePullPolicy: {{ .Values.generatorImage.pullPolicy }}
@@ -52,54 +38,6 @@ spec:
         env:
         - name: GENERATOR_CONFIG_PATH
           value: "/config/generator-config.yaml"
-        - name: LOG_OUTPUT_PATH
-          value: "{{ .Values.generator.logFile.path }}/{{ .Values.generator.logFile.name }}"
-        {{- with .Values.resources.generator }}
-        resources:
-          {{- toYaml . | nindent 10 }}
-        {{- end }}
-        volumeMounts:
-        - name: windows-logs
-          mountPath: {{ .Values.generator.logFile.path }}
-        - name: generator-script
-          mountPath: /scripts
-          readOnly: true
-        - name: generator-config
-          mountPath: /config
-          readOnly: true
-
-      # Main container: Elastic Agent
-      - name: elastic-agent
-        image: "{{ .Values.agentImage.registry }}/{{ .Values.agentImage.repository }}:{{ .Values.agentImage.tag }}"
-        imagePullPolicy: {{ .Values.agentImage.pullPolicy }}
-        {{- with .Values.securityContext }}
-        securityContext:
-          {{- toYaml . | nindent 10 }}
-        {{- end }}
-        env:
-        - name: NODE_NAME
-          valueFrom:
-            fieldRef:
-              fieldPath: spec.nodeName
-        - name: POD_NAME
-          valueFrom:
-            fieldRef:
-              fieldPath: metadata.name
-        - name: POD_NAMESPACE
-          valueFrom:
-            fieldRef:
-              fieldPath: metadata.namespace
-        {{- if .Values.fleet.enabled }}
-        - name: FLEET_ENROLLMENT_TOKEN
-          valueFrom:
-            secretKeyRef:
-              name: {{ include "windows-synthetic-agent.fullname" . }}-secret
-              key: fleet-enrollment-token
-        - name: FLEET_URL
-          value: {{ .Values.fleet.url | quote }}
-        - name: FLEET_INSECURE
-          value: {{ .Values.fleet.insecure | quote }}
-        {{- end }}
         - name: ELASTICSEARCH_HOST
           value: {{ .Values.elasticsearch.host | quote }}
         - name: ELASTICSEARCH_USERNAME
@@ -112,27 +50,19 @@ spec:
             secretKeyRef:
               name: {{ include "windows-synthetic-agent.fullname" . }}-secret
               key: elasticsearch-password
-        {{- with .Values.resources.agent }}
+        {{- with .Values.resources.generator }}
         resources:
           {{- toYaml . | nindent 10 }}
         {{- end }}
         volumeMounts:
-        - name: agent-config
-          mountPath: /etc/elastic-agent/agent.yml
-          subPath: agent.yml
+        - name: generator-script
+          mountPath: /scripts
           readOnly: true
-        - name: windows-logs
-          mountPath: {{ .Values.generator.logFile.path }}
+        - name: generator-config
+          mountPath: /config
           readOnly: true
 
       volumes:
-      - name: windows-logs
-        emptyDir:
-          sizeLimit: {{ .Values.sharedVolume.sizeLimit }}
-      - name: agent-config
-        configMap:
-          name: {{ include "windows-synthetic-agent.fullname" . }}-config
-          defaultMode: 0600
       - name: generator-script
         configMap:
           name: {{ include "windows-synthetic-agent.fullname" . }}-generator-script
